# ImageClassifier

./: .pre-commit-config.yaml  README.md  pyproject.toml
src/img_classifier/: augmentation.py  config.py  main.py  preprocess.py  pyproject.toml  train.py  utils.py  visualize.py
