[tool.poetry]
name = "img-classifier"
version = "0.1.0"
description = ""
authors = ["irenevanblerck <irenevanblerck@gmail.com>"]
readme = "README.md"
packages = [{include = "img_classifier", from = "src"}]

[tool.poetry.dependencies]
python = "^3.9"
black = "^23.1.0"
isort = "^5.12.0"
flake8 = "^6.0.0"
pre-commit = "^3.1.1"
tensorflow = "<2.11"
scikit-learn = "^1.2.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
