[tool.poetry]
name = "img-classifier"
version = "0.1.0"
description = ""
authors = ["irenevanblerck <irenevanblerck@gmail.com>"]
readme = "README.md"
packages = [{include = "img_classifier"}]

[tool.poetry.dependencies]
python = "^3.9"
black = "^23.1.0"
isort = "^5.12.0"
flake8 = "^6.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
